--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> hello world!</h1>
+    <h1> hello world!</h1> 
+    <p> paragraphe Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil cum odit, nostrum, et eos consectetur soluta quod voluptatum placeat vitae, aliquam fuga hic unde provident. Voluptas nesciunt repudiandae atque explicabo!</p>
 </body>
 </html>
